--- a/style.css
+++ b/style.css
@@ -1,37 +1,47 @@
 body {
     font-family: 'Audiowide', 'Courier New', Courier, monospace;
-    background-color: #BB2649
+    background-color: #e88467;
+    height: 100vh;
+    overflow: hidden;
 }
 
 .container {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 90vh;
-    overflow: hidden;
-}
-
-.wrapper {
-    display: flex;
     flex: 1;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 100vh;
 }
 
-.link {
-    display: block;
-    width: 100px;
-    text-align: center;
-    text-decoration: none;
-    color: #EDEADE;
-    padding: 5px;
-    margin-bottom: 10px;
-    border: 1px solid #EDEADE
-}
+
 .description {
     color: #EDEADE;
     text-align: center;
     padding: 10px;
     border: 1px solid #EDEADE;
+}
+
+.hidden-link {
+    color: inherit; 
+    text-decoration: none; 
+    position: relative; 
+    cursor: pointer; 
+}
+
+.hidden-link::before {
+    content: '←'; 
+    position: absolute;
+    right: -30px; 
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.hidden-link:hover::before {
+    opacity: 1; 
+}
+
+.hidden-link:hover {
+    text-decoration: underline;
 }
