--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 .description {
     color: #EDEADE;
     text-align: center;
-    padding: 10px;
+    padding: 10px 20px;
     border: 1px solid #EDEADE;
 }
 
@@ -33,7 +33,7 @@ body {
 .hidden-link::before {
     content: '←'; 
     position: absolute;
-    right: -30px; 
+    right: -15px; 
     opacity: 0;
     transition: opacity 0.3s ease;
 }
